tests/compiler/typecheck/monadic_let_1.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/monadic_let_1.kk:5:3
  │
5 │   #true
  │   ^^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Color       | + Boolean   |
    +---------------+-------------+
